# notebook_invoke

./: .gitignore  README.md  setup.cfg
examples/: invoke_js.ipynb  invoke_py.ipynb
notebook_invoke/: __init__.py  encoder.py  invoke_function.py  invoke_js.py  invoke_py.py
