[metadata]
name = notebook_invoke
version = attr: notebook_invoke.VERSION
description = A Python package providing a common interface for invoking javascript functions in Jupyter and Google Colab.
long_description = file: README.md
keywords = javascript interface, notebook, jupyter, Google Colab
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Michal Gregor

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py
install_requires =
   ipython

[options.package_data]
* = *.txt, *.rst
;hello = *.msg

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2
